# constata-client

./: .gitignore  Cargo.toml  README.md
How to's/constata-multistamp/: README.md  constata-multiproof.sh  constata-multistamp.sh
How to's/diploma-generator/: README.md  alum.csv  diploma-generator.sh  template.html
src/: bin.rs  lib.rs  signature.rs  signed_payload.rs
