[package]
name = "constata_client"
version = "0.1.0"
authors = ["Constata <hola@constata.eu>"]
edition = "2018"

[dependencies]
dialoguer = "0.8.0"
ureq = { version = "*", features = ["json", "charset"] }
simplestcrypt = "*"
serde = "1.0"
base64 = "0.13.0"
base64-serde = "0.6.1"
serde_derive = "1.0"
serde_json = "1.0"
serde_with = { version = "1.6.4", features = ["hex"]}
clap = "2.33.3"
chrono = { version = "0.4", features = ["serde"] }
bitcoin-wallet = { git = "https://github.com/rust-bitcoin/rust-wallet" }
thiserror = "1.0"
sha2 = "0.9.2"
mockito = "0.30.0"

# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "*"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]

[dependencies.bitcoin]
version = "0.26.0"
features = ["base64", "use-serde"]

[dev-dependencies]
cool_asserts = "1.1.1"
fantoccini = "0.17.4"
futures = "0.3.15"
tokio = "*"
assert_cmd = "*"

[lib]
name = "constata_client_lib"

[[bin]]
name = "constata-cli"
path = "src/bin.rs"
